update handtracking logic

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,6 +1,9 @@
 .wrapper {
   width: 100vw;
   height: 60px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
   text-align: center;
   background-color: #f6fafb;
 }
