--- a/src/components/HandPosition.module.css
+++ b/src/components/HandPosition.module.css
@@ -1,7 +1,10 @@
+.wrapper {
+  margin-top: 50px;
+}
+
+.title {
+}
+
 .canvas {
   width: 100%;
-  height: 40vh;
-  background-color: #d49c6b;
-  text-align: center;
-  padding: 20% 0;
 }
