--- a/src/components/HandPosition.module.css
+++ b/src/components/HandPosition.module.css
@@ -4,12 +4,14 @@
   box-sizing: border-box;
   padding: 20px;
   border-radius: 20px;
+  text-align: center;
 }
 
 .title {
+  text-align: left;
 }
 
 .canvas {
-  width: 80%;
+  width: 50%;
   margin: 20px auto;
 }
