--- a/src/pages/Admin.module.css
+++ b/src/pages/Admin.module.css
@@ -4,9 +4,9 @@
 
 .titleWrapper {
   box-sizing: border-box;
-  padding: 20px;
+  padding: 0 20px;
   border-radius: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .title {
@@ -18,9 +18,9 @@
 }
 
 .chartWrapper {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .handWrapper {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
