--- a/src/components/Chat.module.css
+++ b/src/components/Chat.module.css
@@ -18,9 +18,8 @@
 
 .chatWrapper {
   width: 100%;
-  min-height: 30vh;
-  max-height: 30vh;
-  padding: 20px 20px;
+  height: 500px;
+  padding: 20px;
   background-color: white;
   border: 2px solid #c1c8c7;
   border-radius: 40px;
@@ -33,9 +32,9 @@
 }
 
 .message {
-  padding: 10px 20px;
+  padding: 5px 20px;
   border-radius: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   width: 40%;
   word-break: break-word;
 }
