fix help page not adapting to window height

--- a/src/components/Help.module.css
+++ b/src/components/Help.module.css
@@ -1,11 +1,13 @@
 .wrapper {
   color: #f6fafb;
   min-height: 100vh;
+  height: 100%;
   width: 100vw;
   padding: 10%;
   position: absolute;
   z-index: 20;
   background-color: #252b31;
+  overflow-y: scroll;
 }
 
 .title {
